# some_qt6_shit

./: README.md
dont_work/: CMakeLists.txt  README.md  main.cpp
dont_work/.cache/clangd/index/: main.cpp.676CE0EF9152C6C1.idx
work/: CMakeLists.txt  anal.h  main.cpp
work/.cache/clangd/index/: anal.h.BAFFBAEDE0F6C95F.idx  main.cpp.55CAB0738B9DA9CB.idx
